--- a/views/css/style.css
+++ b/views/css/style.css
@@ -5,6 +5,7 @@
     --white: #fff;
     --black: #000;
     --orange: #FF5700;
+    --red: #FF0000;
 
 }
 
@@ -63,9 +64,17 @@ input.website-search:focus, input.website-search:active, input.website-search:ho
     background-color: #F6F7F8 ;
     border-radius: 50%;
     padding: 10px;
+    display: none;
 }
 
-.header-text  a {
+.header-text  a:nth-child(1) {
+    text-decoration: none;
+    font-weight: 600;
+    cursor: pointer;
+    color: var(--blue);
+
+}
+.header-text  a:nth-child(n+2) {
     text-decoration: none;
     padding: 10px;
     border-radius: 99999px;
@@ -73,26 +82,33 @@ input.website-search:focus, input.website-search:active, input.website-search:ho
     font-weight: 600;
     cursor: pointer;
 }
-.header-text  a:nth-child(1){
+.header-text  a:nth-child(2){
     background: #fff;
     color: var(--blue);
     border: 1px solid var(--blue);
+
     
 }
 
-.header-text  a:nth-child(2){
+.header-text  a:nth-child(3){
     background: var(--blue);
     color: var(--white);
     border: 1px solid var(--blue);
+
     
 }
 
+.header-text  a:nth-child(4){
+    background: var(--white);
+    color: var(--red);
+    border: 1px solid var(--red);
+    margin-left: 10px;
+    display: none;
 
-
-
-
-
-
+}
+.header-text span {
+    display: none;
+}
 
 .posts-container {
     margin-top: 2rem;
@@ -188,20 +204,19 @@ div > p {
 
 
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
   }
   
-  /* Modal Content */
   .modal-content {
     position: relative;
     background-color: #fefefe;
@@ -216,7 +231,6 @@ div > p {
     animation-duration: 0.4s
   }
   
-  /* Add Animation */
   @-webkit-keyframes animatetop {
     from {top:-300px; opacity:0} 
     to {top:0; opacity:1}
@@ -227,7 +241,6 @@ div > p {
     to {top:0; opacity:1}
   }
   
-  /* The Close Button */
   .close {
     color: white;
     float: right;
